--- a/app/Resources/translations/home.fr.yml
+++ b/app/Resources/translations/home.fr.yml
@@ -1,1 +1,7 @@
-
+filActualite: Fil d'actualité
+scroll: scroll
+or: ou
+noConnected.h1: Athleteec le réseau social consacré au Sport
+btn.submit.connect: Se connecter
+connexion: Connexion
+inscription: Inscription
