change locale with flags

--- a/app/Resources/translations/home.en.yml
+++ b/app/Resources/translations/home.en.yml
@@ -1,7 +1,7 @@
 filActualite: Feed
 scroll: scroll
 or: or
-noConnected.h1: Athleteec le réseau social consacré au Sport
+noConnected.h1: Athleteec The social network dedicated to the Sport
 btn.submit.connect: Sign in
 connexion: Connexion
 inscription: Inscription
