Add validator post_registration

--- a/app/Resources/translations/fosuser.fr.yml
+++ b/app/Resources/translations/fosuser.fr.yml
@@ -1,8 +1,8 @@
 form.password: Mot de passe (4 caractères)
 form.password_confirmation: Resaisir le mot de passe
-dateDeNaissance: Votre date de naissance
+registration.dateDeNaissance: Votre date de naissance *
 nom: Nom
-prenom: Prenom
+registration.prenom: Prenom *
 ath_user.first_name.blank: Veuillez saisir votre prénom
 password: mot de passe
 mail_adress: Adresse électronique
@@ -10,3 +10,4 @@ form.genre: Vous êtes
 unHomme: Un homme
 uneFemme: Une femme
 uneAssociation: Une Association
+registration.dateDeCreation: Date de Création *
