--- a/app/Resources/translations/validators.fr.yml
+++ b/app/Resources/translations/validators.fr.yml
@@ -5,3 +5,4 @@ ath_user.nom.long: Veuillez saisir un nom plus court
 ath_user.prenom.blank: Veuillez saisir votre prénom
 ath_user.prenom.short: Veuillez saisir un prénom contenant au moins 2 lettres
 ath_user.prenom.long: Veuillez saisir un prénom plus court
+ath_user.dateDeCreation.required: Veuillez saisir la date de création de votre Association
