Override forgotpassword template

--- a/app/Resources/translations/home.fr.yml
+++ b/app/Resources/translations/home.fr.yml
@@ -7,3 +7,5 @@ connexion: Connexion
 inscription: Inscription
 deconnexion: Déconnexion
 formConnection.errorPass: L'authentification a échoué
+forgotPassword: Mot de passe oublié
+
