--- a/app/Resources/translations/home.fr.yml
+++ b/app/Resources/translations/home.fr.yml
@@ -11,3 +11,5 @@ forgotPassword: Mot de passe oublié
 save: Enregistrer
 flash.edit.success: Modification enregistré
 flash.edit.error: Une erreur est survenue
+profile.flash.photoSupprimer: La photo de profil a bien été supprimé
+prenom: prénom
