Ajout debut demande de celebrite

--- a/app/Resources/translations/home.fr.yml
+++ b/app/Resources/translations/home.fr.yml
@@ -19,3 +19,5 @@ connexion.twitter: Connexion Twitter
 inscription.facebook: Inscription Facebook
 inscription.google: Inscription google+
 inscription.twitter: Inscription Twitter
+faire.demande.celebrite: faire une demande afin d'avoir le statut de célébrité
+title.demande.celecrite: Créer une demande de célébrité
