lipimaginebundle and remove avalanche

--- a/app/Resources/translations/fosuser.fr.yml
+++ b/app/Resources/translations/fosuser.fr.yml
@@ -24,3 +24,4 @@ title.monProfil: Mon profil
 formEditProfile.photo: Photo de profil
 profile.retirerLaPhoto: Retirer la photo
 profile.supprimerMaPhoto: Supprimer ma photo
+edit.dateDeNaissance: Votre date de naissance
