--- a/app/Resources/translations/home.fr.yml
+++ b/app/Resources/translations/home.fr.yml
@@ -26,3 +26,5 @@ demande_celebrite.label.message: Veuillez saisir votre demande
 edit.dateDeNaissance: Votre date de naissance
 demandeCelebrite.message: Votre message
 villeNonRenseigne: Ville non renseigné
+modifier.profil: Modifier mon profil
+suivre: Suivre
