--- a/app/Resources/translations/home.fr.yml
+++ b/app/Resources/translations/home.fr.yml
@@ -28,3 +28,6 @@ demandeCelebrite.message: Votre message
 villeNonRenseigne: Ville non renseigné
 modifier.profil: Modifier mon profil
 suivre: Suivre
+flash.new_contact: Vous suivez désormais les actualités de %user%
+ne_plus_suivre: Ne plus suivre
+flash.remove_contact: Vous ne suivez plus les actualités de %user%
