Infinite scroll followers

--- a/app/Resources/translations/home.fr.yml
+++ b/app/Resources/translations/home.fr.yml
@@ -39,3 +39,8 @@ title.settings: Paramètres
 flash.settings_save: Vos paramètres ont bien été enregistré
 btn.save: Enregistrer
 btn.send: Envoyer
+voir_tous: Voir tous les followers
+followers.of: Followers de %user%
+ville: Ville
+show_profil: Voir profil
+no.results: Plus de résultats
