Event admin + refactor webPath methods

--- a/app/Resources/translations/home.fr.yml
+++ b/app/Resources/translations/home.fr.yml
@@ -43,4 +43,4 @@ voir_tous: Voir tous les followers
 followers.of: Followers de %user%
 ville: Ville
 show_profil: Voir profil
-no.results: Plus de résultats
+no.results: Pas plus de résultats
