Validator dateEventAdmin + add csv date format

--- a/app/Resources/translations/administration.fr.yml
+++ b/app/Resources/translations/administration.fr.yml
@@ -16,3 +16,4 @@ gestion_demande_celebrite: Gestion des demandes de célébrité
 datavisualisation: Datavisualisation
 statistique_user: Statistique utilisateur
 statistique: Statistique
+gestion_evenement_sportifs: Gestion des évènements sportifs
