--- a/app/Resources/translations/home.fr.yml
+++ b/app/Resources/translations/home.fr.yml
@@ -44,3 +44,9 @@ followers.of: Followers de %user%
 ville: Ville
 show_profil: Voir profil
 no.results: Pas plus de résultats
+voir_tous_events: Voir tous les évènements
+title.event_sportifs: Les évènements sportifs
+lien_billeterie_inscription: Lien Billeterie/Inscription
+description: Description
+no_event_sportifs: Aucun évènement sportif pour le moment
+no_followers: Aucun follower pour le moment
