--- a/app/Resources/translations/home.fr.yml
+++ b/app/Resources/translations/home.fr.yml
@@ -50,3 +50,5 @@ lien_billeterie_inscription: Lien Billeterie/Inscription
 description: Description
 no_event_sportifs: Aucun évènement sportif pour le moment
 no_followers: Aucun follower pour le moment
+new_post: Nouvelle actualité
+placeholder.new_post: Ajouter une nouvelle actualité
