--- a/app/Resources/translations/fosuser.fr.yml
+++ b/app/Resources/translations/fosuser.fr.yml
@@ -29,7 +29,7 @@ edit.siteWeb: Votre site web
 edit.associationSports: Les sports pratiqués au sein de votre association
 edit.dateDeCreation: Date de Création
 edit.emptyValue: Sélectionner une valeur
-edit.userInterets: Les sport qui vous intéressent
+edit.userInterets: Les sports qui vous intéressent
 profil.nomAssoc: Nom de l'association
 profil.adresse: Adresse
 profil.description: Description
@@ -42,7 +42,7 @@ profil.nom: Nom
 profil.adresse: Adresse
 profil.description: Description
 profil.siteWeb: Site web
-profil.associationSports: Sport pratiqués au sein de l'association
+profil.associationSports: Sports pratiqués au sein de l'association
 profil.interetSports: Intérêt pour les sports
 profil.dateDeNaissance: Date de naissance
 profil.ville: Ville
