--- a/app/Resources/translations/home.fr.yml
+++ b/app/Resources/translations/home.fr.yml
@@ -11,8 +11,8 @@ forgotPassword: Mot de passe oublié
 save: Enregistrer
 flash.edit.success: Modification enregistré
 flash.edit.error: Une erreur est survenue
-flash.demande_celebrite.success: Votre demande a bien été enregistré vous receverez une réponse par mail
-profile.flash.photoSupprimer: La photo de profil a bien été supprimé
+flash.demande_celebrite.success: Votre demande a bien été enregistrée vous receverez une réponse par mail
+profile.flash.photoSupprimer: La photo de profil a bien été supprimée
 prenom: prénom
 connexion.facebook: Connexion Facebook
 connexion.google: Connexion google+
@@ -20,12 +20,12 @@ connexion.twitter: Connexion Twitter
 inscription.facebook: Inscription Facebook
 inscription.google: Inscription google+
 inscription.twitter: Inscription Twitter
-faire.demande.celebrite: faire une demande afin d'avoir le statut de célébrité
+faire.demande.celebrite: Faire une demande afin d'avoir le statut de célébrité
 title.demande.celecrite: Créer une demande de célébrité
 demande_celebrite.label.message: Veuillez saisir votre demande
 edit.dateDeNaissance: Votre date de naissance
 demandeCelebrite.message: Votre message
-villeNonRenseigne: Ville non renseigné
+villeNonRenseigne: Ville non renseignée
 modifier.profil: Modifier mon profil
 suivre: Suivre
 flash.new_contact: Vous suivez désormais les actualités de %user%
@@ -54,3 +54,4 @@ new_post: Nouvelle actualité
 placeholder.new_post: Ajouter une nouvelle actualité
 error.404: Page non trouvé
 retour.accueil: Retourner à l'accueil
+Rechercher: Rechercher
