--- a/app/Resources/translations/home.en.yml
+++ b/app/Resources/translations/home.en.yml
@@ -54,5 +54,7 @@ new_post: News
 placeholder.new_post: Add a news
 error.404: Error 404
 error.404_message: Sorry, page not found
+error.403: Error 403
+error.403_message: You don't have permission to access this page
 retour.accueil: Go Back home
 Rechercher: Search
