--- a/app/Resources/translations/home.en.yml
+++ b/app/Resources/translations/home.en.yml
@@ -56,5 +56,7 @@ error.404: Error 404
 error.404_message: Sorry, page not found
 error.403: Error 403
 error.403_message: You don't have permission to access this page
+error.500: Error 500
+error.500_message: Internal server error
 retour.accueil: Go Back home
 Rechercher: Search
