--- a/app/Resources/translations/home.fr.yml
+++ b/app/Resources/translations/home.fr.yml
@@ -56,5 +56,7 @@ error.404: Erreur 404
 error.404_message: Désolé, la page demandée n'existe pas
 error.403: Erreur 403
 error.403_message: Vous n'êtes pas autorisé à accéder à cette page
+error.500: Erreur 500
+error.500_message: Une erreur s'est produite
 retour.accueil: Retourner à l'accueil
 Rechercher: Rechercher
