Templates password bootstrap

--- a/app/Resources/translations/home.fr.yml
+++ b/app/Resources/translations/home.fr.yml
@@ -61,3 +61,4 @@ error.500_message: Une erreur s'est produite
 retour.accueil: Retourner à l'accueil
 Rechercher: Rechercher
 placeholder.comment: Appuyer entrée pour envoyer
+change_password.title: Changer de mot de passe
