Permettre au celebrite d'ajouter des produits à leur équipement

--- a/app/Resources/translations/administration.fr.yml
+++ b/app/Resources/translations/administration.fr.yml
@@ -17,3 +17,4 @@ datavisualisation: Datavisualisation
 statistique_user: Statistique utilisateur
 statistique: Statistique
 gestion_evenement_sportifs: Gestion des évènements sportifs
+gestion_produits_celebrite: Gérer mon équipement sportif
