--- a/app/Resources/translations/home.fr.yml
+++ b/app/Resources/translations/home.fr.yml
@@ -62,3 +62,5 @@ retour.accueil: Retourner à l'accueil
 Rechercher: Rechercher
 placeholder.comment: Appuyer entrée pour envoyer
 change_password.title: Changer de mot de passe
+welcome: Bienvenue sur
+home_text: Grâce à ce réseau social centré sur les sportifs, vous pourrez organiser des événements et suivre l'actualité sportive de vos amis et célébrités.
