--- a/app/Resources/translations/home.en.yml
+++ b/app/Resources/translations/home.en.yml
@@ -60,3 +60,5 @@ error.500: Error 500
 error.500_message: Internal server error
 retour.accueil: Go Back home
 Rechercher: Search
+welcome: Welcome to
+home_text: With this social network dedicated to the athletes, you can organize events and follow the sport news of your friends and favorite celebrities.
